--- a/Untitled-7.html
+++ b/Untitled-7.html
@@ -38,6 +38,10 @@
             <img src="liver.jpg"><br>
             <span> 119,000 </span>
             <p> Perfectly Good Liver! </p>
+	    <input id= "quantity2" type="text" placeholder="Quantity">
+	    <button onclick="checkout()">
+		 checkout
+	    </button>
         </div>
     </body>
 <html>
